[FIX] web: snailmail global address spacing
The JP report is displaying the company name at the end of the address.
This scenario was not taken in consideration in the previous fix
odoo/odoo@9a206d858d66

This lead to rethinking the approach to a more pragmatic approach
targeting anything under the address block instead of being specific.

This will lead to 16 extra pixels on the 4 reports with the
o_snail_mail class, but provide a more consistent result and less
customization.

task-4076930

--- a/addons/web/static/src/webclient/actions/reports/report.scss
+++ b/addons/web/static/src/webclient/actions/reports/report.scss
@@ -132,22 +132,13 @@ div[name=comment] p, div[name=address] p {
 
 .o_snail_mail {
     // Moving anything under the address (eg Tax ID) further down to
-    // avoid breaking Pingen validation. !important because field template
-    // comes with mb-0 utility class.
-    .address {
-        padding-top: $o-snailmail-address-padding-top;
-
-        div[name="address"] > address {
-            margin-bottom: $spacer !important;
-        }
+    // avoid breaking Pingen validation.
+    div[itemtype="http://schema.org/PostalAddress"] {
+        margin-bottom: $spacer;
     }
 
-    // Same as above for followup, because it doesn't use the same structure.
+    // Adaptation for followup, the address doesn't use the same structure.
     .o_followup_address {
         padding-top: $o-snailmail-address-padding-top;
-
-        div[itemscope="itemscope"] > div:first-child {
-            margin-bottom: $spacer;
-        }
     }
 }
